banco de dados postgree render

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # PostgreSQL database configuration
-DB_NAME=contratos_db
+DB_NAME=DB_NAME=contratos_db_dex0
 DB_USER=contratos_db_dex0_user
 DB_PASSWORD=qA1Si6PXA6Z3DzM8iZgyxyzNHC9CtyKj
 DB_HOST=dpg-d11hmmu3jp1c73f0rle0-a
