--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@
 DB_NAME=contratos_db_dex0
 DB_USER=contratos_db_dex0_user
 DB_PASSWORD=qA1Si6PXA6Z3DzM8iZgyxyzNHC9CtyKj
-DB_HOST=dpg-d11hmmu3jp1c73f0rle0-a
+DB_HOST=dpg-d11hmmu3jp1c73f0rle0-a.oregon-postgres.render.com
 DB_PORT=5432
+
+# Flask secret key
+SECRET_KEY=sua_chave_ultra_secreta_123456
